--- a/gogo-react-start-with-auth/package.json
+++ b/gogo-react-start-with-auth/package.json
@@ -48,7 +48,8 @@
     "react-transition-group": "^4.4.1",
     "react-yandex-maps": "^4.6.0",
     "reactstrap": "^8.8.1",
-    "redux": "^4.0.5",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "sortablejs": "^1.13.0",
     "video.js": "^7.10.2",
