--- a/gogo-react-start-with-auth/package.json
+++ b/gogo-react-start-with-auth/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "availity-reactstrap-validation": "^2.7.0",
     "axios": "^0.21.1",
+    "base64-img": "^1.0.4",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
     "firebase": "^8.2.2",
