--- a/gogo-react-start-with-auth/package.json
+++ b/gogo-react-start-with-auth/package.json
@@ -54,6 +54,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "sortablejs": "^1.13.0",
+    "symbol-observable": "^4.0.0",
     "video.js": "^7.10.2",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.8"
