--- a/gogo-react-start-with-auth/package.json
+++ b/gogo-react-start-with-auth/package.json
@@ -4,7 +4,9 @@
   "description": "Gogo - React Bootstrap 4 Admin Dashboard Template",
   "private": true,
   "dependencies": {
+    "@david.kucsai/react-pdf-table": "^0.4.1",
     "@glidejs/glide": "^3.4.1",
+    "@react-pdf/renderer": "1.6.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,6 +17,8 @@
     "classnames": "2.2.6",
     "firebase": "^8.2.2",
     "formik": "^2.2.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "moment": "2.29.1",
     "mousetrap": "^1.6.5",
     "node-sass": "^4.14.1",
