--- a/gogo-react-start-with-auth/package.json
+++ b/gogo-react-start-with-auth/package.json
@@ -36,6 +36,7 @@
     "react-dropzone-component": "^3.2.0",
     "react-google-maps": "^9.4.5",
     "react-headroom": "^3.1.0",
+    "react-image-crop": "8.6.9",
     "react-image-lightbox": "^5.1.1",
     "react-input-mask": "^2.0.4",
     "react-intl": "5.10.15",
